ginawang jsp yung mga html, and nagdagdag ng session handling

--- a/NetBeans_SE/web/WEB-INF/web.xml
+++ b/NetBeans_SE/web/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </servlet>
     <!-- Default Welcome Page -->
     <welcome-file-list>
-        <welcome-file>LandingPage.html</welcome-file>
+        <welcome-file>LandingPage.jsp</welcome-file>
     </welcome-file-list>
     <!-- Session Configuration -->
     <servlet-mapping>
