--- a/NetBeans_SE/nbproject/project.properties
+++ b/NetBeans_SE/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.12.1.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\gson-2.12.1.jar
+file.reference.jackson-annotations-2.14.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-annotations-2.14.0.jar
+file.reference.jackson-core-2.9.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-core-2.9.9.jar
+file.reference.jackson-databind-2.9.9.2.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-databind-2.9.9.2.jar
 file.reference.mysql-connector-j-8.4.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +47,11 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv4ee7
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.jackson-core-2.9.9.jar}:\
+    ${file.reference.jackson-annotations-2.14.0.jar}:\
+    ${file.reference.jackson-databind-2.9.9.2.jar}:\
+    ${file.reference.gson-2.12.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
