--- a/NetBeans_SE/nbproject/project.properties
+++ b/NetBeans_SE/nbproject/project.properties
@@ -32,8 +32,7 @@ file.reference.gson-2.12.1.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Web
 file.reference.jackson-annotations-2.14.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-annotations-2.14.0.jar
 file.reference.jackson-core-2.9.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-core-2.9.9.jar
 file.reference.jackson-databind-2.9.9.2.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-databind-2.9.9.2.jar
-file.reference.mysql-connector-j-8.4.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\Lenovo\\Documents\\NetBeansProjects\\DRIVERS\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar=../../RedStone Website/mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,7 +52,7 @@ javac.classpath=\
     ${file.reference.jackson-annotations-2.14.0.jar}:\
     ${file.reference.jackson-databind-2.9.9.2.jar}:\
     ${file.reference.gson-2.12.1.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
