--- a/NetBeans_SE/nbproject/project.properties
+++ b/NetBeans_SE/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.12.1.jar=../../RedStone Website/gson-2.12.1.jar
+file.reference.itextpdf-5.5.9.jar=../../DRIVERS/itextpdf-5.5.9.jar
 file.reference.jackson-annotations-2.14.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-annotations-2.14.0.jar
 file.reference.jackson-core-2.9.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-core-2.9.9.jar
 file.reference.jackson-databind-2.9.9.2.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-databind-2.9.9.2.jar
@@ -51,7 +52,8 @@ javac.classpath=\
     ${file.reference.jackson-core-2.9.9.jar}:\
     ${file.reference.jackson-annotations-2.14.0.jar}:\
     ${file.reference.jackson-databind-2.9.9.2.jar}:\
-    ${file.reference.gson-2.12.1.jar}
+    ${file.reference.gson-2.12.1.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
