--- a/NetBeans_SE/web/WEB-INF/web.xml
+++ b/NetBeans_SE/web/WEB-INF/web.xml
@@ -20,13 +20,57 @@
         <servlet-class>Controllers.StaffActionsServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UserServlet</servlet-name>
+        <servlet-name>DBManager</servlet-name>
         <servlet-class>Controllers.DBManager</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>UserServlet</servlet-name>
-        <url-pattern>/user</url-pattern>
-    </servlet-mapping>
+    <servlet>
+        <servlet-name>Adistribute</servlet-name>
+        <servlet-class>Controllers.Adistribute</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Aeditproduct</servlet-name>
+        <servlet-class>Controllers.Aeditproduct</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Aeditproduct_delete</servlet-name>
+        <servlet-class>Controllers.Aeditproduct_delete</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Agetproducts</servlet-name>
+        <servlet-class>Controllers.Agetproducts</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Aincreasequantity</servlet-name>
+        <servlet-class>Controllers.Aincreasequantity</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Amanagedefective</servlet-name>
+        <servlet-class>Controllers.Amanagedefective</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Anewproduct</servlet-name>
+        <servlet-class>Controllers.Anewproduct</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Aview</servlet-name>
+        <servlet-class>Controllers.Aview</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Bgetproducts</servlet-name>
+        <servlet-class>Controllers.Bgetproducts</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Bpullout</servlet-name>
+        <servlet-class>Controllers.Bpullout</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Bsales</servlet-name>
+        <servlet-class>Controllers.Bsales</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Bview</servlet-name>
+        <servlet-class>Controllers.Bview</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
@@ -42,6 +86,58 @@
     <servlet-mapping>
         <servlet-name>StaffActionsServlet</servlet-name>
         <url-pattern>/StaffActionsServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DBManager</servlet-name>
+        <url-pattern>/DBManager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Adistribute</servlet-name>
+        <url-pattern>/Adistribute</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Aeditproduct</servlet-name>
+        <url-pattern>/Aeditproduct</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Aeditproduct_delete</servlet-name>
+        <url-pattern>/Aeditproduct_delete</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Agetproducts</servlet-name>
+        <url-pattern>/Agetproducts</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Aincreasequantity</servlet-name>
+        <url-pattern>/Aincreasequantity</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Amanagedefective</servlet-name>
+        <url-pattern>/Amanagedefective</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Anewproduct</servlet-name>
+        <url-pattern>/Anewproduct</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Aview</servlet-name>
+        <url-pattern>/Aview</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Bgetproducts</servlet-name>
+        <url-pattern>/Bgetproducts</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Bpullout</servlet-name>
+        <url-pattern>/Bpullout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Bsales</servlet-name>
+        <url-pattern>/Bsales</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Bview</servlet-name>
+        <url-pattern>/Bview</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
