--- a/NetBeans_SE/nbproject/project.properties
+++ b/NetBeans_SE/nbproject/project.properties
@@ -28,22 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.derbyclient.jar=../lib/derbyclient.jar
-file.reference.gson-2.12.1.jar=../../RedStone Website/gson-2.12.1.jar
-file.reference.gson-2.12.1.jar-1=../lib/gson-2.12.1.jar
-file.reference.itextpdf-5.5.9.jar=../../RedStone Website/itextpdf-5.5.9.jar
-file.reference.itextpdf-5.5.9.jar-1=../lib/itextpdf-5.5.9.jar
+file.reference.commons-codec-1.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\commons-codec-1.9.jar
+file.reference.derbyclient.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\derbyclient.jar
+file.reference.gson-2.12.1.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\gson-2.12.1.jar
+file.reference.itextpdf-5.5.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\itextpdf-5.5.9.jar
 file.reference.jackson-annotations-2.14.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-annotations-2.14.0.jar
-file.reference.jackson-annotations-2.14.0.jar-1=../lib/jackson-annotations-2.14.0.jar
 file.reference.jackson-core-2.9.9.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-core-2.9.9.jar
-file.reference.jackson-core-2.9.9.jar-1=../lib/jackson-core-2.9.9.jar
 file.reference.jackson-databind-2.9.9.2.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\jackson-databind-2.9.9.2.jar
-file.reference.jackson-databind-2.9.9.2.jar-1=../lib/jackson-databind-2.9.9.2.jar
-file.reference.javaee-endorsed-api-7.0-javadoc.jar=../lib/javaee-endorsed-api-7.0-javadoc.jar
-file.reference.javax.servlet-api-4.0.1.jar=../lib/javax.servlet-api-4.0.1.jar
-file.reference.mysql-connector-j-8.4.0.jar=../../RedStone Website/mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-j-8.4.0.jar-1=../lib/mysql-connector-j-8.4.0.jar
-file.reference.mysql-connector-java-5.1.34.jar=../lib/mysql-connector-java-5.1.34.jar
+file.reference.mysql-connector-j-8.4.0.jar=D:\\Codes for School\\SE_SourceCode\\RedStone Website\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -58,16 +50,14 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv4ee7
 jar.compress=false
 javac.classpath=\
+    ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.gson-2.12.1.jar-1}:\
-    ${file.reference.itextpdf-5.5.9.jar-1}:\
-    ${file.reference.jackson-annotations-2.14.0.jar-1}:\
-    ${file.reference.jackson-core-2.9.9.jar-1}:\
-    ${file.reference.jackson-databind-2.9.9.2.jar-1}:\
-    ${file.reference.javaee-endorsed-api-7.0-javadoc.jar}:\
-    ${file.reference.javax.servlet-api-4.0.1.jar}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.34.jar}
+    ${file.reference.gson-2.12.1.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.jackson-annotations-2.14.0.jar}:\
+    ${file.reference.jackson-core-2.9.9.jar}:\
+    ${file.reference.jackson-databind-2.9.9.2.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
